[package]
name = "pikmin-aggregator"
version = "0.1.0"
authors = ["esplo <esplo@users.noreply.github.com>"]
edition = "2018"

description = "An aggregator for executions of crypto-currency exchanges."
repository = "https://github.com/esplo/pikmin"
readme = "README.md"
keywords = ["cryptocurrency", "util"]
categories = ["command-line-utilities"]
license = "MIT"

exclude = [
    ".travis.yml",
]

[dependencies]
log = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
crossbeam-utils = "0.6"
mysql = { version = "15.0", features = ["ssl"] }

[dev-dependencies]
pretty_env_logger = "0.3"

[[example]]
name = "main"